--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,9 @@
 {
   "name": "t-flight-decorator",
+  "version": "0.0.0",
+  "authors": [
+    "Ganesh Ratnaparkhi <ganeshr43@gmail.com>"
+  ],
   "description": "It has all the decorators required in search to book flow of flight",
   "main": "t-flight-decorator.html",
   "dependencies": {
